--- a/additional.html
+++ b/additional.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    Simple string or content here.
+    Simple string or content here. A new version!
 </body>
 </html>
